# meteocre

./: .gitignore  LICENSE  README.md  TODO.txt  conf.py  datamining_clusters.py  datamining_fetch_param_idxs.py  datamining_hrrrdl_download.py  datamining_negative_samples.py  datamining_positive_samples.py  datamining_read_params.py  datamining_reports_by_location.py  dev-requirements.txt  hrrr_fetch_demo.py  index.rst  parse_warning_shapefile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  storm_events_import_demo.py  stormevents_fetch_demo.py  test_hrrr_mesoanalysis.py  test_mrms_product.py  test_probsevere.py
examples/: 00_meteocre_setup.ipynb  01_fetchhrrr_demo.ipynb  hrrr_fetch_demo.ipynb  hrrr_fetch_demo.py  mrms_mass_download.py  parse_warning_shapefile.ipynb  parse_warning_shapefile.py  stormevents_fetch_demo.ipynb  stormevents_fetch_demo.py  test_hrrr_mesoanalysis.ipynb  test_hrrr_mesoanalysis.py  test_mrms_product.ipynb  test_mrms_product.py  test_probsevere.ipynb  test_probsevere.py
fetchhrrr/: __init__.py  hrrr_product.py  utils.py
fetchhrrr/inventory_csv/: hrrrv1_nat_00_15.csv  hrrrv3_subh_00_00.csv  hrrrv4_nat_00_01.csv  hrrrv4_nat_02_48.csv  hrrrv4_prs_00_01.csv  hrrrv4_prs_02_48.csv  hrrrv4_sfc_00_01.csv  hrrrv4_subh_00_00.csv
fetchhrrr/inventory_json/: hrrr_v2_inventory.json
meteocre/: __init__.py  utils.py
meteocre/fetchhrrr/: __init__.py  hrrr_inventory.py  hrrr_product.py  utils.py
meteocre/fetchmrms/: colormaps.py  mrms_product.py
meteocre/fetchmrms/probsevere/: __init__.py  plots.py  product.py  product_collection.py
meteocre/fetchspc/: spc_reports.py
meteocre/fetchwwa/: __init__.py
meteocre/stormevents/: __init__.py  fetch.py  storm_event_detailed_report.py  storm_event_fatality_report.py  storm_event_location.py  utils.py
nwstools/: __init__.py  utils.py
nwstools/fetchhrrr/: __init__.py  hrrr_inventory.py  hrrr_product.py  mesoanalysis.py  utils.py
nwstools/fetchhrrr/inventory_csv/: hrrrv1_prs_00_15.csv  hrrrv2_nat_00_01.csv  hrrrv2_nat_02_18.csv  hrrrv3_subh_01_36.csv  hrrrv4_sfc_02_48.csv  hrrrv4_subh_01_18.csv
nwstools/fetchhrrr/inventory_json/: hrrr_v1_inventory.json  hrrr_v3_inventory.json  hrrr_v4_inventory.json  inventory_csv_to_json.py
nwstools/fetchhrrr/visualize/: nws_standard_colormaps.py
nwstools/fetchmrms/: __init__.py  mrms_product.py
nwstools/fetchmrms/probsevere/: feature.py  feature_track.py
nwstools/fetchspc/: spc_reports.py
nwstools/fetchwwa/: __init__.py  phenom.py  wwa_polygon.py
nwstools/stormevents/: fetch.py  storm_event_detailed_report.py  storm_event_fatality_report.py  storm_event_location.py  utils.py
pydocs/: Makefile  conf.py  index.rst  meteocre.fetchhrrr.rst  meteocre.fetchhrrr.visualize.rst  meteocre.fetchmrms.probsevere.rst  meteocre.fetchmrms.rst  meteocre.fetchspc.rst  meteocre.fetchwwa.rst  meteocre.rst  meteocre.stormevents.rst  modules.rst
ref/hrrr_inventory/inventory_csv/: hrrrv1_sfc_00_15.csv  hrrrv1_subh_00_15.csv  hrrrv2_prs_00_01.csv  hrrrv3_prs_02_36.csv  hrrrv3_sfc_00_01.csv  hrrrv3_sfc_02_36.csv
stormevents/: __init__.py  storm_event_detailed_report.py
