[metadata]
name = meteocre
version = 0.0.1
author = Jon Dalrymple
description = Tools for working with meteorlogical data
long_description = Tools for working with meteorlogical data so I can pretend to be a meteorologist
url = https://github.com/jdalrym2/meteocre
keywords = 
[options]
python_requires = >=3.9, <4
packages = find:
install_requires = 
    pytz
    gdal>=3.0.0
    numpy
    scipy
    tqdm
    matplotlib
